--- a/src/components/CardCategory/slide.css
+++ b/src/components/CardCategory/slide.css
@@ -26,7 +26,7 @@
 }
 
 .slides .slick-slide {
-  background-color: rgb(205, 204, 207);
+  background-color: #37a073;
   border-radius: 20px;
   margin: 2px;
   box-sizing: content-box;
@@ -35,6 +35,9 @@
 
 .slides .slick-slide:hover {
   cursor: pointer;
+  background-color: #11df86;
+  text-decoration: none;
+  transition: background-color 1s;
 }
 
 .slides .slick-slide img {
